...
        <BottomNavBar />
      </View>
    );
  }

  return (
    <View style={styles.container} accessibilityLabel="screen-checkout" testID="screen-checkout">
      <CustomNavbar title={t("checkout")} navigation={navigation} />

      <ScrollView contentContainerStyle={styles.scrollContent} {...getTestProps("scroll-checkout")}>
        {/* Delivery Address */}
        <View style={[styles.sectionHeader, { flexDirection: row }]} accessibilityLabel="view-section-address">
          <Text style={[styles.sectionTitle, { textAlign }]} {...getReadableTextProps("text-section-address", t("deliveryAddress"))}>{t("deliveryAddress")}</Text>
...
